--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
       "name": "Launch DreamSeeker",
       "preLaunchTask": "Build All",
       "dmb": "${workspaceFolder}/${command:CurrentDMB}",
-      "dreamDaemon": true
+      "dreamDaemon": false
     }
   ]
 }
